--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
@@ -65,5 +69,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
