--- a/serie-service/src/main/resources/application.yml
+++ b/serie-service/src/main/resources/application.yml
@@ -1,4 +1,8 @@
+server:
+  port: ${PORT:${SERVER_PORT:0}}
 spring:
+  application:
+    name: serie-service
   mongodb:
     embedded:
       version: 4.0.2
@@ -6,5 +10,17 @@ spring:
     mongodb:
       database: test
       port: 27017
-server:
-  port: 0
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    registry-fetch-interval-seconds: 5
+    healthcheck:
+      enabled: true
+    service-url:
+      default-zone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 5
+    lease-expiration-duration-in-seconds: 10
