Agregando rabbit a catalog y movie

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,3 +16,8 @@ services:
     image: openzipkin/zipkin:2
     ports:
       - 9411:9411
+  rabbimq:
+    image: rabbitmq:3-management
+    ports:
+      - 5672:5672
+      - 15672:15672
